--- a/src/pages/productos.astro
+++ b/src/pages/productos.astro
@@ -3,8 +3,8 @@ import Layout from '../layouts/Layout.astro';
 //import Card from '../components/Card.astro';
 ---
 
-<Layout title="Shopee clon">
-	SECCION DEL MEDIO
+<Layout title="Listado de productos">
+	ACA VA LISTADO DE PRODUCTOS
 </Layout>
 
 <style>
