--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,28 +1,29 @@
 ---
+import { Icon } from "astro-icon/components";
 interface Props {
 	title: string;
 }
 
 const { title } = Astro.props;
 
-const products=[
+const products = [
 	{
-		icon:"",
-		name:"Producto 1"
+		icon: "",
+		name: "Producto 1",
 	},
 	{
-		icon:"",
-		name:"Producto 2"
+		icon: "",
+		name: "Producto 2",
 	},
 	{
-		icon:"",
-		name:"Producto 3"
+		icon: "",
+		name: "Producto 3",
 	},
-    {
-		icon:"",
-		name:"Producto 4"
-	}
-]
+	{
+		icon: "",
+		name: "Producto 4",
+	},
+];
 ---
 
 <!doctype html>
@@ -35,42 +36,73 @@ const products=[
 		<title>{title}</title>
 	</head>
 	<body>
-		<div class="header">
-			<div class="container header_info">
-				Contenido de la cabecera
+		<div class="bg-zinc-800">
+			<div class="container flex items-center">
+				<img src="/public/aliexpress.webp" class="h-[61px]" />
+				<div class="bg-zinc-800 relative">
+					<input placeholder="Buscar..." class="h-9 rounded-full pl-5 pr-14 outline-none w-96"/>
+
+					<div class="bg-zinc-800 right-1 top-[2px] absolute inline-block text-white rounded-2xl py-1 px-1">
+					 <Icon name="mdi:search" class="size-6" />	
+					</div>
+				</div>
+				<div class="text-white pl-5 flex ">
+					<Icon name="mdi:qrcode" class="size-8"/>
+					<p class="text-xs">Descarga la app <br> de aliexpress</p>
+				</div>
 			</div>
 		</div>
-		<div class="container banner">
-			BANNER
-		</div>
+
+		<div class="container banner">BANNER</div>
 
 		<nav class="container main_menu">
-			<a href="/">Inicio</a>  <a href="/productos">Productos</a>
+			<a href="/">Inicio</a>
+			<a href="/productos">Productos</a>
 		</nav>
 
 		<div class="container categorias">
 			{
-				products.map((product) =><div>
-				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M12 2C7.51 2 4 4.2 4 7v10c0 2.8 3.51 5 8 5s8-2.2 8-5V7c0-2.8-3.51-5-8-5zm0 18c-3.54 0-6-1.58-6-3v-6.67A10.52 10.52 0 0 0 12 12a10.52 10.52 0 0 0 6-1.67V17c0 1.42-2.46 3-6 3zm0-10c-3.54 0-6-1.58-6-3s2.46-3 6-3 6 1.58 6 3-2.46 3-6 3z"></path><ellipse cx="12" cy="7" rx="3" ry="1.71"></ellipse></svg>
-				{product.name}</div>)
+				products.map((product) => (
+					<div>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							width="24"
+							height="24"
+							viewBox="0 0 24 24"
+							style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
+						>
+							<>
+								<path d="M12 2C7.51 2 4 4.2 4 7v10c0 2.8 3.51 5 8 5s8-2.2 8-5V7c0-2.8-3.51-5-8-5zm0 18c-3.54 0-6-1.58-6-3v-6.67A10.52 10.52 0 0 0 12 12a10.52 10.52 0 0 0 6-1.67V17c0 1.42-2.46 3-6 3zm0-10c-3.54 0-6-1.58-6-3s2.46-3 6-3 6 1.58 6 3-2.46 3-6 3z" />
+								<ellipse cx="12" cy="7" rx="3" ry="1.71" />
+							</>
+						</svg>
+						{product.name}
+					</div>
+				))
 			}
 			<div>
-				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M12 2C7.51 2 4 4.2 4 7v10c0 2.8 3.51 5 8 5s8-2.2 8-5V7c0-2.8-3.51-5-8-5zm0 18c-3.54 0-6-1.58-6-3v-6.67A10.52 10.52 0 0 0 12 12a10.52 10.52 0 0 0 6-1.67V17c0 1.42-2.46 3-6 3zm0-10c-3.54 0-6-1.58-6-3s2.46-3 6-3 6 1.58 6 3-2.46 3-6 3z"></path><ellipse cx="12" cy="7" rx="3" ry="1.71"></ellipse></svg>Nombre Producto
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="24"
+					height="24"
+					viewBox="0 0 24 24"
+					style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
+					><path
+						d="M12 2C7.51 2 4 4.2 4 7v10c0 2.8 3.51 5 8 5s8-2.2 8-5V7c0-2.8-3.51-5-8-5zm0 18c-3.54 0-6-1.58-6-3v-6.67A10.52 10.52 0 0 0 12 12a10.52 10.52 0 0 0 6-1.67V17c0 1.42-2.46 3-6 3zm0-10c-3.54 0-6-1.58-6-3s2.46-3 6-3 6 1.58 6 3-2.46 3-6 3z"
+					></path><ellipse cx="12" cy="7" rx="3" ry="1.71"
+					></ellipse></svg
+				>Nombre Producto
 			</div>
 		</div>
-		<div class="container products">
-			PRODUCTOS
-		</div>
+		<div class="container products">PRODUCTOS</div>
 		<div class="container">
-		<slot />
+			<slot />
 		</div>
-		<div class="container footer">
-			ESTE ES EL FOOTER
-		</div>
+		<div class="container footer">ESTE ES EL FOOTER</div>
 	</body>
 </html>
 <style is:global>
-	.main_menu{
+	.main_menu {
 		display: flex;
 		height: 40px;
 		background-color: #f18805;
@@ -84,30 +116,18 @@ const products=[
 		display: flex;
 		transition: background 300ms ease-in-out;
 	}
-	.main_menu a:hover{
-		background: #F0A202;
+	.main_menu a:hover {
+		background: #f0a202;
 	}
-	.header{
-		background:orange;
 
-	}
-	.header_info{
-		height: 80px;
-	}
-	.container{
-		max-width: 1280px;
-		margin: 0 auto;
-
-	}
-	.banner{
+	.banner {
 		height: 240px;
 	}
-	.categorias{
+	.categorias {
 		display: flex;
 		height: 120px;
-
 	}
-	.categorias div{
+	.categorias div {
 		display: flex;
 		height: 100%;
 		max-width: 120px;
@@ -117,14 +137,14 @@ const products=[
 		background: red;
 		align-items: center;
 	}
-	.products{
+	.products {
 		height: 150px;
 	}
-	.footer{
+	.footer {
 		height: 80px;
 	}
-	.main_menu
-	html , body {
+	.main_menu html,
+	body {
 		margin0: 0;
 		font-family: system-ui, sans-serif;
 	}
