como hacer capas o opciones que se descomprimen

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,12 +48,22 @@ const products = [
 				</div>
 				<div class="text-white pl-5 flex ">
 					<Icon name="mdi:qrcode" class="size-8"/>
-					<p class="text-xs">Descarga la app <br> de aliexpress</p>
+					<p class="text-xs">Descarga la app <br> de aliex press</p>
 				</div>
+
+				<a class="h-10 group flex relative text-lg rounded-full border-2 text-center px-4 text-white" href="#">
+					Todas las clases
+					<menu class="hidden group-hover:block left-0 top-7 w-full absolute bg-zinc-800">
+						<ul>
+							<li>opcion 1</li>
+							<li>opcion 2</li>
+							<li>opcion 3</li>
+			
+						</ul>
+					</menu>
+					</a>
 			</div>
 		</div>
-
-		<div class="container banner">BANNER</div>
 
 		<nav class="container main_menu">
 			<a href="/">Inicio</a>
