--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,87 +35,111 @@ const products = [
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>{title}</title>
 	</head>
+
 	<body>
-		<div class="bg-zinc-800">
+		<div class="bg-zinc-800 h-max pb-1">
 			<div class="container flex items-center">
 				<img src="/public/aliexpress.webp" class="h-[61px]" />
 				<div class="bg-zinc-800 relative">
-					<input placeholder="Buscar..." class="h-9 rounded-full pl-5 pr-14 outline-none w-96"/>
+					<input
+						placeholder="Buscar..."
+						class="h-9 rounded-full pl-5 pr-14 outline-none w-96"
+					/>
 
-					<div class="bg-zinc-800 right-1 top-[2px] absolute inline-block text-white rounded-2xl py-1 px-1">
-					 <Icon name="mdi:search" class="size-6" />	
+					<div
+						class="bg-zinc-800 right-1 top-[2px] absolute inline-block text-white rounded-2xl py-1 px-1"
+					>
+						<Icon name="mdi:search" class="size-6" />
 					</div>
 				</div>
-				<div class="text-white pl-5 flex ">
-					<Icon name="mdi:qrcode" class="size-8"/>
-					<p class="text-xs">Descarga la app <br> de aliex press</p>
+				<div class="text-white pl-5 flex">
+					<Icon name="mdi:qrcode" class="size-8" />
+					<p class="text-xs">Descarga la app <br /> de aliex press</p>
 				</div>
+			</div>
 
-				<a class="h-10 group flex relative text-lg rounded-full border-2 text-center px-4 text-white" href="#">
-					Todas las clases
-					<menu class="hidden group-hover:block left-0 top-7 w-full absolute bg-zinc-800">
-						<ul>
-							<li>opcion 1</li>
-							<li>opcion 2</li>
-							<li>opcion 3</li>
-			
-						</ul>
-					</menu>
+			<div class="inferior flex justify-start">
+					<a
+						class="h-8 group rounded-full text-center flex items-center px-3 pb-1 relative text-white font-sans text-base mb-1 ml-6 transition ease-in-out delay-150 bg-gray-600  hover:bg-white hover:text-gray-600 duration-50"
+						href="#"
+					>
+						Todas las categorias
+						<menu
+							class="hidden group-hover:block left-0 top-0 w-full absolute rounded-3xl text-gray-600 bg-slate-50"
+						>Todas las categorias
+							<ul>
+								<li>opcion 1</li>
+								<li>opcion 2</li>
+								<li>opcion 3</li>
+							</ul>
+						</menu>
 					</a>
+				</div>
+		</div>
+		<!-- <div class="otra_parte mt-20">
+			<nav class="container main_menu ">
+				<a href="/">Inicio</a>
+				<a href="/productos">Productos</a>
+			</nav>
+
+			<div class="container categorias">
+				{
+					products.map((product) => (
+						<div>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="24"
+								height="24"
+								viewBox="0 0 24 24"
+								style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
+							>
+								<>
+									<path d="M12 2C7.51 2 4 4.2 4 7v10c0 2.8 3.51 5 8 5s8-2.2 8-5V7c0-2.8-3.51-5-8-5zm0 18c-3.54 0-6-1.58-6-3v-6.67A10.52 10.52 0 0 0 12 12a10.52 10.52 0 0 0 6-1.67V17c0 1.42-2.46 3-6 3zm0-10c-3.54 0-6-1.58-6-3s2.46-3 6-3 6 1.58 6 3-2.46 3-6 3z" />
+									<ellipse cx="12" cy="7" rx="3" ry="1.71" />
+								</>
+							</svg>
+							{product.name}
+						</div>
+					))
+				}
+				<div>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
+						><path
+							d="M12 2C7.51 2 4 4.2 4 7v10c0 2.8 3.51 5 8 5s8-2.2 8-5V7c0-2.8-3.51-5-8-5zm0 18c-3.54 0-6-1.58-6-3v-6.67A10.52 10.52 0 0 0 12 12a10.52 10.52 0 0 0 6-1.67V17c0 1.42-2.46 3-6 3zm0-10c-3.54 0-6-1.58-6-3s2.46-3 6-3 6 1.58 6 3-2.46 3-6 3z"
+						></path><ellipse cx="12" cy="7" rx="3" ry="1.71"
+						></ellipse></svg
+					>Nombre Producto
+				</div>
 			</div>
+
+			<div class="container products"></div>
+			<div class="container">
+				<slot />
+			</div>
+			<div class="container footer">ESTE ES EL FOOTER</div>
+		</div> -->
+	
+		<div class="grid grid-cols-9 grid-rows-7 gap-2 row- 2">
+			<div class="bg-red-500 text-white col-span-2 row-span-2 min-h-40"> Caja 1</div>
+			<div class="bg-red-500 text-white col-span-3 row-span-7 min-h-40"> Caja 2</div>
+			<div class="bg-red-500 text-white col-span-4 row-span-4 min-h-40"> Caja 3</div>
+			<div class="bg-red-500 text-white col-span-2 row-span-5 min-h-40"> Caja 4</div>
+			<div class="bg-red-500 text-white col-span-4 row-span-3 min-h-40"> Caja 5</div>
 		</div>
 
-		<nav class="container main_menu">
-			<a href="/">Inicio</a>
-			<a href="/productos">Productos</a>
-		</nav>
-
-		<div class="container categorias">
-			{
-				products.map((product) => (
-					<div>
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							width="24"
-							height="24"
-							viewBox="0 0 24 24"
-							style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
-						>
-							<>
-								<path d="M12 2C7.51 2 4 4.2 4 7v10c0 2.8 3.51 5 8 5s8-2.2 8-5V7c0-2.8-3.51-5-8-5zm0 18c-3.54 0-6-1.58-6-3v-6.67A10.52 10.52 0 0 0 12 12a10.52 10.52 0 0 0 6-1.67V17c0 1.42-2.46 3-6 3zm0-10c-3.54 0-6-1.58-6-3s2.46-3 6-3 6 1.58 6 3-2.46 3-6 3z" />
-								<ellipse cx="12" cy="7" rx="3" ry="1.71" />
-							</>
-						</svg>
-						{product.name}
-					</div>
-				))
-			}
-			<div>
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					width="24"
-					height="24"
-					viewBox="0 0 24 24"
-					style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
-					><path
-						d="M12 2C7.51 2 4 4.2 4 7v10c0 2.8 3.51 5 8 5s8-2.2 8-5V7c0-2.8-3.51-5-8-5zm0 18c-3.54 0-6-1.58-6-3v-6.67A10.52 10.52 0 0 0 12 12a10.52 10.52 0 0 0 6-1.67V17c0 1.42-2.46 3-6 3zm0-10c-3.54 0-6-1.58-6-3s2.46-3 6-3 6 1.58 6 3-2.46 3-6 3z"
-					></path><ellipse cx="12" cy="7" rx="3" ry="1.71"
-					></ellipse></svg
-				>Nombre Producto
-			</div>
-		</div>
-		<div class="container products">PRODUCTOS</div>
-		<div class="container">
-			<slot />
-		</div>
-		<div class="container footer">ESTE ES EL FOOTER</div>
 	</body>
 </html>
 <style is:global>
+	/*
 	.main_menu {
 		display: flex;
 		height: 40px;
-		background-color: #f18805;
+		background-color: #dd7819;
 	}
 	.main_menu a {
 		text-decoration: none;
@@ -157,7 +181,7 @@ const products = [
 	body {
 		margin0: 0;
 		font-family: system-ui, sans-serif;
-	}
+	}*/
 	code {
 		font-family:
 			Menlo,
